Changes to index.html

--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
   <body>
     <h1>Hello World</h1>
     <p>I'm hosted with GitHub Pages.</p>
+    <p>Do I remember how to create a webpage in html? Link to another page?
+    </p>
   </body>
 </html>
